Fixed sidebar visibility

--- a/source/stylesheets/all.css.sass
+++ b/source/stylesheets/all.css.sass
@@ -80,12 +80,14 @@ a
       color: $color-black
 
   li
-    box-shadow: 0px 1px 0px rgba(#000, 0.05)
     &:last-child
       box-shadow: none
+      a
+        margin-bottom: 0
     a
       display: block
       color: $color-gray
+      margin-bottom: rhythm(1)/2
       &:hover
         color: $color-blue
 
